# Obj2Voxel

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Nrrd.h  Obj.cpp  Obj.h  Voxel.cpp  Voxel.h
proto/: CMakeLists.txt  proto.h  voxel.proto
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  ObjTest.cpp  ObjTest.h  VoxelTest.cpp  VoxelTest.h  main.cpp
